Fix spacing on blog index pagination

--- a/version_control/Codurance_September2020/css/pages/blog-index.css
+++ b/version_control/Codurance_September2020/css/pages/blog-index.css
@@ -94,9 +94,9 @@
 
 .blog-pagination ul {
   display: flex;
-  justify-content: center;
   align-items: center;
   list-style-type: none;
+  justify-content: space-evenly;
 }
 
 .pagination-wrapper {
